<resources>
    <string name="app_name">My Tasks</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_title_hint">Title (required)</string>
    <string name="edit_description_hint">Description</string>
    <string name="edit_button">Edit the task</string>
    <string name="delete_button">Delte the task</string>
    <string name="SaveButton">save</string>
    <string name="instructions_heading">"No Task "</string>
    <string name="instructions">Click<b> + </b>below to add task</string>
    <string name="edit_Time_hint">Pick Date And Time</string>
    <string name="DateTime">22,May 2020</string>
    <string name="PickDateAndTime">Pick Date And Time</string>
    <string name="menu_aboutapp">About app</string>
    <string name="about_copyright">Copyright © 2020 Nitin Thakur</string>
    <string name="about_weblink">Source code available at https://github.com/thakurnitin2684/MyTasks</string>
    <string name="about_email">For support or suggestion, email thakurnitin2684@gmail.com</string>
    <string name="about_credits">Icons derived from at <b>material.io</b></string>
    <string name="success_update">Task Updated</string>
    <string name="success_save">Task Saved!</string>
    <string name="title_required">Title Required!!</string>
    <string name="no_tasks">No Tasks !</string>
    <string name="click_button_to_add_tasks">Click + button to add tasks</string>
</resources>
