<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">


          <LinearLayout
              android:id="@+id/linearLayout"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="1dp"
              android:background="@color/colorAccent"
              android:orientation="vertical"
              android:padding="32dp"
              app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintVertical_bias="0.51">

               <com.google.android.material.textfield.TextInputLayout
                   android:id="@+id/edit_Title"
                   style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="64dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_Title_in"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/edit_title_hint"
                        android:inputType="textNoSuggestions"
                        android:maxLength="24" />
               </com.google.android.material.textfield.TextInputLayout>

               <com.google.android.material.textfield.TextInputLayout
                   android:id="@+id/edit_Description"
                   style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="32dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_Description_in"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/edit_description_hint"
                        android:inputType="textMultiLine"
                        android:maxLength="256" />

               </com.google.android.material.textfield.TextInputLayout>
          </LinearLayout>

          <androidx.constraintlayout.widget.ConstraintLayout
              android:id="@+id/constraintLayout"
              android:layout_width="match_parent"
              android:layout_height="400dp"
              android:background="@color/colorPrimaryLight"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/linearLayout">


               <Button
                   android:id="@+id/edit_save"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="32dp"
                   android:text="@string/SaveButton"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toBottomOf="@+id/edit_show_time" />

               <TextView
                   android:id="@+id/edit_show_time"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   app:layout_constraintBaseline_toBaselineOf="@+id/edit_time"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toEndOf="@+id/edit_time"
                   tools:text="@string/DateTime" />

               <Button
                   android:id="@+id/edit_time"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="32dp"
                   android:layout_marginTop="32dp"
                   android:text="@string/PickDateAndTime"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toTopOf="parent" />
          </androidx.constraintlayout.widget.ConstraintLayout>

     </LinearLayout>
</ScrollView>